--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ body {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
+    text-transform: uppercase;
     
 }
 .biggest-title{
